# fast_plscan

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: cpp-api.instructions.md  documentation.instructions.md  python-api.instructions.md  tests.instructions.md
.github/prompts/: add-feature.prompt.md  add-test.prompt.md
.github/workflows/: _build_wheels.yml  build_wheels.yml  pull_request.yml  release.yml
cmake/: wrap_stubs.py
debug/: script.py
docs/: _paper_figures.ipynb  _trial_barcodes.ipynb  _trial_persistence_pruning.ipynb  conf.py  demo_computational_performance.ipynb  demo_parameter_sensitivity.ipynb  demo_selection_strategies.ipynb  forests.ipynb  index.rst  input_types.ipynb  local_development.rst  notebook.ipynb  reference_api.rst  reference_lib.rst  reference_plscan.rst  trial_barcodes.ipynb  using_approximate_prediction.ipynb  using_basic_api.ipynb  using_bi_persistences.ipynb  using_centroids_medoids.ipynb  using_exploration_plots.ipynb  using_membership_vectors.ipynb  using_multiple_components.ipynb  using_other_distances.ipynb  using_sample_weights.ipynb
docs/lib/: plotting.py
scripts/: collect_coverage.ps1  collect_coverage.sh
src/_lib/: CMakeLists.txt
src/fast_plscan/: __init__.py  _helpers.py  api.py  plots.py  prediction.py  sklearn.py
src/plscan/: __init__.py  _api.py  _condense_tree.cpp  _condense_tree.h  _condensed_tree.cpp  _distances.cpp  _labelling.cpp  _labelling.h  _leaf_tree.cpp  _leaf_tree.h  _linkage_tree.cpp  _linkage_tree.h  _persistence_trace.cpp  _persistence_trace.h  _space_tree.cpp  _spanning_tree.cpp  _spanning_tree.h  _sparse_graph.cpp  _sparse_graph.h  _threads.cpp  api.py  plots.py  sklearn.py
tests/: checks.py  conftest.py  generate_fixture.py  test_api.py  test_distances.py  test_plots.py  test_prediction.py  test_sklearn.py  test_space_tree.py
tests/data/: fixture_knn.npz  knn_no_loops.npz
tests/test_api/: test_distances.py  test_input_modes.py  test_internals.py  test_parameters.py  test_post_fit_methods.py
tests/test_plots/: test_condensed_tree.py  test_leaf_tree.py  test_persistence_trace.py
tests/test_prediction/: test_all_points_membership_vectors.py  test_approximate_predict.py  test_membership_vectors.py
tests/test_sklearn/: test_centroids.py  (+20 more)
(+24 files in other folders)
